added height 100vh; target all of the margin of page

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,12 +1,12 @@
 
 
 .light
-{background-color:beige ;
-color :black;}
+{ }
 
 .dark
 {background-color: darkslategrey;
-color:beige;}
+color:beige;
+height:100vh;}
 
 
 
