--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -14,6 +14,14 @@ height:100vh;}
 
 .slider{background-color: darkslategrey;}
 
-/* //.blogcontainer{
-    display: ;
-} */
+.blogcontainer{
+    display:flex;
+flex-direction:column;
+}
+/* .blog-card
+{} */
+
+h3
+{border-style:ridge;
+
+}
