added a img to asssets

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,7 +3,7 @@ header{
     display:flex;
 }
 .light
-{ background-color: white;}
+{ background-image: white;}
 
 .dark
 {background-color: darkslategrey;
