rearaged username to the bottom and <i> posted : inline 26 blog.js

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -3,7 +3,7 @@ header{
     display:flex;
 }
 .light
-{ background-image: white;}
+{ background-color: white;}
 
 .dark
 {background-color: darkslategrey;
