--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,10 +1,8 @@
  
  
- body
- {
+ body{
     
-background-image: url("four.jpg");
-background-size: cover;}
+ }
 
 header{
     display:flex;
@@ -12,7 +10,7 @@ header{
     margin:31px;
     }
 
-    #sunshine{ }
+   /*  #sunshine{ } */
 
 
 
@@ -39,17 +37,21 @@ flex-direction: column;}
 
     
     border-width: 5px;
-    border-color: #332f59;
+    border-color: #9fc5e8;
     padding:0;
-    background-color:#332f59;
+    background-color:#9fc5e8;
     text-align: center;
-   color:aliceblue;
+   
     text-decoration: ;
     border-radius: ; */
 }
 
  .leftcontainer
-{border: 50px;}
+{border: 50px;
+    border-bottom-right-radius: 188px 208px;
+    border-color:#d7e6fa;
+    border-style: double;
+}
 
 #blogtitle
-{font-size: 50px;} 
+{font-size: 50px;;} 
