--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -42,8 +42,8 @@ flex-direction: column;}
     background-color:#9fc5e8;
     text-align: center;
    
-    text-decoration: ;
-    border-radius: ; */
+    /* text-decoration: ;
+    border-radius: ; */ 
 }
 
  .leftcontainer
